--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 upload_speed = 921600
+monitor_speed = 921600
 lib_deps = 
     NTPClient
     ESP Async WebServer
